--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,20 @@
       filter: blur(0px);
     }
   }
+
+  @keyframes fade-out{
+    from{
+      opacity: 1;
+      transform: translateY(0);
+      filter: blur(0px);
+    }
+    to{
+      opacity: 0;
+      transform: translateY(20px);
+      filter: blur(10px);
+    }
+  }
+
   .animate-fade-in {
     animation: fade-in 0.3s ease-out both;
   }
